--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,7 +91,7 @@ jobs:
         name: Render Index
         id: render-template
         with:
-          template: 'static/index.html.hbs'
+          template: "static/index.html.hbs"
           inputs: |
             {
               "OfficialFilename": "${{ steps.variables.outputs.OfficialFilename }}",
@@ -120,6 +120,7 @@ jobs:
     name: Deploy firmwares to Github Pages
     runs-on: ubuntu-latest
     needs: consolidate
+    if: github.event_name != 'pull_request'
     permissions:
       pages: write
       id-token: write
