--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,9 @@ updates:
     schedule:
       interval: weekly
     open-pull-requests-limit: 10
+    groups:
+      artifacts:
+        applies-to: version-updates
+        patterns:
+          - "@actions/upload-artifact"
+          - "@actions/download-artifact"
